--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build index.html --public-url ./"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "node-sass": "^4.13.0"
   }
 }
